tests/tooling/fixtures/native/recovery/negative/negative_switch_case_for_true_break_conservative_reject.objc3
// Negative fixture: non-static for/control-flow escape paths remain conservative in switch case-body return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchCaseForTrueBreakConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      for (let i = 0; true; i = i + 1) {
        break;
      }
    case 2:
      return 42;
    default:
      return 9;
  }
}
